# snowchatsql

./: .gitignore  README.md  pyproject.toml  requirements.txt
prompts/stg1/: prompt_0.txt  prompt_1.txt  prompt_10.txt  prompt_2.txt  prompt_3.txt  prompt_4.txt  prompt_5.txt  prompt_6.txt  prompt_7.txt  prompt_8.txt  prompt_9.txt
prompts/stg2/: questions_1.txt  questions_10.txt  questions_2.txt  questions_3.txt  questions_4.txt  questions_5.txt  questions_6.txt  questions_7.txt  questions_8.txt
src/: Home.py  init.py  init_vector_store.py  prompt_generator.py
src/pages/: 1_Chat.py  1_ChatSQL.py  2_Prompt_Settings.py
src/snowchatsql/: c_env.py  c_state.py  prompt_builder.py  snowflake.py  vector_store.py
src/snowchatsql/chroma_db_data/: chroma-collections.parquet  chroma-embeddings.parquet
src/snowchatsql/chroma_db_data/index/: id_to_uuid_cbdb3fce-6e9a-4f6c-ae1d-c1a76b1f4ca4.pkl  id_to_uuid_deda3cf4-241a-493e-abd1-1e4cff772f13.pkl  index_metadata_cbdb3fce-6e9a-4f6c-ae1d-c1a76b1f4ca4.pkl  index_metadata_deda3cf4-241a-493e-abd1-1e4cff772f13.pkl  uuid_to_id_cbdb3fce-6e9a-4f6c-ae1d-c1a76b1f4ca4.pkl  uuid_to_id_deda3cf4-241a-493e-abd1-1e4cff772f13.pkl
src/snowchatsql/config/: config.py  config_aws.py  config_chroma.py  config_snowflake.py
src/snowchatsql/prompt_template/: p1.template.txt
src/util/: io_base.py
