[tool.poetry]
name = "snowchatsql"
version = "0.1.0"
description = ""
authors = ["rycharlind <rycharlind@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
streamlit = "^1.21.0"
openai = "^0.27.4"
snowflake-snowpark-python = "^1.3.0"
autopep8 = "^2.0.2"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"
streamlit-extras = "^0.2.7"
chromadb = "^0.3.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
